--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -30,3 +30,8 @@ test:
 
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
+
+shared:
+  stripe_test_publishable_key: pk_test_eYSKYwAPZ23dqYofpIITg7I5
+  stripe_test_secret_key: sk_test_rbOoe14YYB6589d8ol8VtYVn
